--- a/dbtest2/Views/Home/TableDelete.cshtml
+++ b/dbtest2/Views/Home/TableDelete.cshtml
@@ -1,4 +1,16 @@
 ﻿@model List<dbtest2.Models.Car>
+@*@{
+    string carnum = "1111";
+    //int ticket_id = 0;
+    //string title = "";
+
+    //if (Model?.Count > 0)
+    //{
+    //    ticket_id = Model[0].Ticket_Id;
+    //    title = Model[0].Title;
+
+    //}
+}*@
 
 <div class="container">
     <div class="row">
@@ -19,7 +31,16 @@
 
                         <div class="row m-t-30">
                             <div class="col-md-12">
-                                <button type="submit" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>
+                                @*@foreach (var car in Model)
+                                {
+                                    if (car.CarNum.Equals(carnum))
+                                    {
+                                        <button type="submit" onclick="btn1_click(@car.Parking_Fee);" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>
+
+                                    }
+                                }*@
+                                <button type="submit" onclick="btn1_click('OK');" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>
+                                @*<button type="submit" onclick="btn1_click();" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
                             </div>
                         </div>
                         <hr />
@@ -31,3 +52,8 @@
     </div>
 </div>
 
+<script>
+    function btn1_click(s) {
+        alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
+    }
+</script>
