--- a/dbtest2/Views/Home/TableList.cshtml
+++ b/dbtest2/Views/Home/TableList.cshtml
@@ -5,16 +5,16 @@
         <div class="col-md-12">
             <div class="card strpied-tabled-with-hover">
                 <div class="card-header ">
-                    <h4 class="card-title">Striped Table with Hover</h4>
-                    <p class="card-category">Here is a subtitle for this table</p>
+                    <h3 class="card-title">차량 보기</h3>
+                    <p class="card-category">현재 주차된 차량입니다.</p>
                 </div>
                 <div class="card-body table-full-width table-responsive">
                     <table class="table table-hover table-striped">
                         <thead>
                         <th>ID</th>
-                        <th>Car_Number</th>
-                        <th>In_Time</th>
-                        <th>Owner</th>
+                        <th>차량 번호</th>
+                        <th>입차 시각</th>
+                        <th>소유자</th>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
@@ -27,17 +27,6 @@
                             </tr>
                             }
                         </tbody>
-                        @*<tbody>
-                @foreach (System.Data.DataRow row in dt.Rows)
-                {
-                    <tr>
-                        <td>@row["car_id"]</td>
-                        <td>@row["carnum"]</td>
-                        <td>@row["intime"]</td>
-                        <td>@row["outtime"]</td>
-                    </tr>
-                }
-            </tbody>*@
                     </table>
                     @if (Model.Count() == 0)
                     {
