--- a/dbtest2/Views/Home/TableDelete.cshtml
+++ b/dbtest2/Views/Home/TableDelete.cshtml
@@ -24,6 +24,8 @@
         //}
     }*@
 
+@*<script type="text/javascript" src="http://code.jquery.com/jquery-3.5.1.min.js"></script>*@
+
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
@@ -44,9 +46,12 @@
                         <div class="row m-t-30">
                             <div class="col-md-12">
 
+                                <button type="submit" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>
+
+                                @*<button type="submit" onclick="btn1_click();" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
                                 @*<button type="submit" onclick="btn1_click(@Model.Parking_Fee.ToString());" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
                                 @*<button type="submit" onclick="btn1_click('OK');" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
-                                <button type="submit" onclick="btn1_click();" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>
+                                @*<button type="submit" id="btn1" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
 
                                 @*아래 실행 가능 - (*)*@
                                 @*<button type="submit" onclick="btn1_click(@ViewBag.Car.Parking_Fee.ToString());" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
@@ -62,40 +67,110 @@
 </div>
 
 
-<script>
-    function btn1_click() {
-
-        // JQuery Ajax
-        $.ajax({
-            type: "POST",
-            url: "/home/TableDelete_Input",
-            dataType: "json",
-            data: {
-                "Parking_Fee": Parking_Fee
-            },
-            success: function (data) {
-                alert(data.msg);
-                //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
-                location.reload();
-            },
-            error: function (xhr) {
-                alert(xhr.responseText);
-            }
-        });
-    }
-</script>
-
-
 
 
 @*<script>
-        function btn1_click(s) {
-            alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
+        $("#btn1").click(function () {
+
+            alert("등록1");
+
+            // JQuery Ajax
+            $.ajax({
+                type: "POST",
+                url: "/home/TableDelete_Input",
+                dataType: "json",
+                data: {
+                    "Parking_Fee": Parking_Fee
+                },
+                success: function (data) {
+                    if (data)
+                        alert("Success");
+                    else
+                        alert("Fail");
+                    //alert(data.msg);
+                    //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
+                    location.reload();
+                },
+                error: function (xhr) {
+                    alert(xhr.responseText);
+                }
+            });
+
+        });
+    </script>*@
+
+@*<script>
+        function btn1_click() {
+
+            //alert("등록1");
+
+            // JQuery Ajax
+            $.ajax({
+                type: "POST",
+                url: "/Home/TableDelete_Input",
+                cache: false,
+                contentType: false,
+                processData:false,
+                data: {
+                    "Parking_Fee": Parking_Fee
+                },
+                success: function (data) {
+                    if (data)
+                        alert("Success");
+                    else
+                        alert("Fail");
+                    //alert(data.msg);
+                    //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
+                    location.reload();
+                },
+                error: function (xhr) {
+                    alert(xhr.responseText);
+                }
+            });
         }
     </script>*@
 
 @*<script>
-            function btn1_click() {
-                alert("주차 요금은 @ViewBag.Car.Parking_Fee 원 입니다.\n출차했습니다.");
-            }
+        function btn1_click() {
+
+            //alert("등록1");
+
+            // JQuery Ajax
+            $.ajax({
+                type: "POST",
+                url: "/Home/TableDelete_Input",
+                dataType: "json",
+                data: {
+                    "Parking_Fee": Parking_Fee
+                },
+                success: function (data) {
+                    if (data)
+                        alert("Success");
+                    else
+                        alert("Fail");
+                    //alert(data.msg);
+                    //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
+                    location.reload();
+                },
+                error: function (xhr) {
+                    alert(xhr.responseText);
+                }
+            });
+        }
     </script>*@
+
+@*<script>
+    function btn1_click(s) {
+
+            //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
+        }
+    </script>*@
+
+@*<script>
+    function btn1_click() {
+        alert("주차 요금은 --- 원 입니다.\n출차했습니다.");
+    }
+</script>*@
+
+@*alert("주차 요금은 @ViewBag.Car.Parking_Fee 원 입니다.\n출차했습니다.");*@
+
