--- a/dbtest2/Views/Home/TableDelete.cshtml
+++ b/dbtest2/Views/Home/TableDelete.cshtml
@@ -1,30 +1,4 @@
-﻿@*@model List<dbtest2.Models.Car>*@
-
-@model dbtest2.Models.Car
-
-@*@{
-        ViewBag.Title = "TableDelete";
-    }*@
-
-@*@{
-        var car = this.Model;
-    }*@
-
-
-@*@{
-        string carnum = "1111";
-        //int ticket_id = 0;
-        //string title = "";
-
-        //if (Model?.Count > 0)
-        //{
-        //    ticket_id = Model[0].Ticket_Id;
-        //    title = Model[0].Title;
-
-        //}
-    }*@
-
-@*<script type="text/javascript" src="http://code.jquery.com/jquery-3.5.1.min.js"></script>*@
+﻿@model dbtest2.Models.Car
 
 <div class="container">
     <div class="row">
@@ -45,16 +19,7 @@
 
                         <div class="row m-t-30">
                             <div class="col-md-12">
-
                                 <button type="submit" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>
-
-                                @*<button type="submit" onclick="btn1_click();" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
-                                @*<button type="submit" onclick="btn1_click(@Model.Parking_Fee.ToString());" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
-                                @*<button type="submit" onclick="btn1_click('OK');" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
-                                @*<button type="submit" id="btn1" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
-
-                                @*아래 실행 가능 - (*)*@
-                                @*<button type="submit" onclick="btn1_click(@ViewBag.Car.Parking_Fee.ToString());" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">출차</button>*@
                             </div>
                         </div>
                         <hr />
@@ -65,112 +30,4 @@
         </div>
     </div>
 </div>
-
-
-
-
-@*<script>
-        $("#btn1").click(function () {
-
-            alert("등록1");
-
-            // JQuery Ajax
-            $.ajax({
-                type: "POST",
-                url: "/home/TableDelete_Input",
-                dataType: "json",
-                data: {
-                    "Parking_Fee": Parking_Fee
-                },
-                success: function (data) {
-                    if (data)
-                        alert("Success");
-                    else
-                        alert("Fail");
-                    //alert(data.msg);
-                    //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
-                    location.reload();
-                },
-                error: function (xhr) {
-                    alert(xhr.responseText);
-                }
-            });
-
-        });
-    </script>*@
-
-@*<script>
-        function btn1_click() {
-
-            //alert("등록1");
-
-            // JQuery Ajax
-            $.ajax({
-                type: "POST",
-                url: "/Home/TableDelete_Input",
-                cache: false,
-                contentType: false,
-                processData:false,
-                data: {
-                    "Parking_Fee": Parking_Fee
-                },
-                success: function (data) {
-                    if (data)
-                        alert("Success");
-                    else
-                        alert("Fail");
-                    //alert(data.msg);
-                    //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
-                    location.reload();
-                },
-                error: function (xhr) {
-                    alert(xhr.responseText);
-                }
-            });
-        }
-    </script>*@
-
-@*<script>
-        function btn1_click() {
-
-            //alert("등록1");
-
-            // JQuery Ajax
-            $.ajax({
-                type: "POST",
-                url: "/Home/TableDelete_Input",
-                dataType: "json",
-                data: {
-                    "Parking_Fee": Parking_Fee
-                },
-                success: function (data) {
-                    if (data)
-                        alert("Success");
-                    else
-                        alert("Fail");
-                    //alert(data.msg);
-                    //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
-                    location.reload();
-                },
-                error: function (xhr) {
-                    alert(xhr.responseText);
-                }
-            });
-        }
-    </script>*@
-
-@*<script>
-    function btn1_click(s) {
-
-            //alert("주차 요금은 " + s + "원 입니다.\n출차했습니다.");
-        }
-    </script>*@
-
-@*<script>
-    function btn1_click() {
-        alert("주차 요금은 --- 원 입니다.\n출차했습니다.");
-    }
-</script>*@
-
-@*alert("주차 요금은 @ViewBag.Car.Parking_Fee 원 입니다.\n출차했습니다.");*@
 
