--- a/dbtest2/Views/Home/TableDelete.cshtml
+++ b/dbtest2/Views/Home/TableDelete.cshtml
@@ -1,6 +1,4 @@
-﻿@model dbtest2.Models.Car
-
-<div class="container">
+﻿<div class="container">
     <div class="row">
         <div class="col-sm-12">
             <form class="md-float-material form-material" method="post" action="/home/TableDelete_Input">
@@ -13,7 +11,7 @@
                         </div>
                         <div class="form-group form-primary">
                             <label class="float-label">차량 번호</label>
-                            <input type="text" name="carnum" class="form-control" placeholder="Car Number">
+                            <input type="text" name="carnum" class="form-control" placeholder="Car Number" required="required">
                             <span class="form-bar"></span>
                         </div>
 
