--- a/dbtest2/Views/Home/TableInsert.cshtml
+++ b/dbtest2/Views/Home/TableInsert.cshtml
@@ -11,7 +11,7 @@
                         </div>
                         <div class="form-group form-primary">
                             <label class="float-label">차량 번호</label>
-                            <input type="text" name="carnum" class="form-control" placeholder="Car Number">
+                            <input type="text" name="carnum" class="form-control" placeholder="Car Number" required="required">
                             <span class="form-bar"></span>
                         </div>
 
@@ -30,10 +30,8 @@
     </div>
 </div>
 
-<script>
+@*<script>
     function btn1_click() {
         alert("입차했습니다.");
     }
-</script>
-
-
+</script>*@
