--- a/dbtest2/Views/Login/Login.cshtml
+++ b/dbtest2/Views/Login/Login.cshtml
@@ -1,12 +1,7 @@
-﻿@*@model dbtest2.ViewModel.LoginViewModel*@
-
-<section class="login-block">
-    <!-- Container-fluid starts -->
+﻿<section class="login-block">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <!-- Authentication card start -->
-
                 <form class="md-float-material form-material" method="post" action="/login/login">
                     <div class="text-center">
                         <img src="/Content/img/login/logo.png" alt="logo.png">
@@ -18,33 +13,16 @@
                                     <h3 class="text-center">Sign In</h3>
                                 </div>
                             </div>
-
-                            @*<div class="text-danger" asp-validation-summary="ModelOnly"></div>*@
-
                             <div class="form-group form-primary">
                                 <label class="float-label">Email Address</label>
-                                <input type="text" name="email" class="form-control" placeholder="Your Email Address">
-                                <span class="form-bar" ></span>
+                                <input type="text" id="email" name="email" class="form-control" placeholder="Your Email Address" required="required">
+                                <span class="form-bar"></span>
                             </div>
                             <div class="form-group form-primary">
                                 <label class="float-label">Password</label>
-                                <input type="password" name="password" class="form-control" placeholder="Password">
-                                <span class="form-bar" ></span>
+                                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="required">
+                                <span class="form-bar"></span>
                             </div>
-                            @*<div class="row m-t-25 text-left">
-                    <div class="col-12">
-                        <div class="checkbox-fade fade-in-primary d-">
-                            <label>
-                                <input type="checkbox" value="">
-                                <span class="cr"><i class="cr-icon icofont icofont-ui-check txt-primary"></i></span>
-                                <span class="text-inverse">Remember me</span>
-                            </label>
-                        </div>
-                        <div class="forgot-phone text-right f-right">
-                            <a href="auth-reset-password.html" class="text-right f-w-600"> Forgot Password?</a>
-                        </div>
-                    </div>
-                </div>*@
                             <div class="row m-t-30">
                                 <div class="col-md-12">
                                     <button type="submit" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">Sign in</button>
@@ -59,11 +37,7 @@
                         </div>
                     </div>
                 </form>
-                <!-- end of form -->
             </div>
-            <!-- end of col-sm-12 -->
         </div>
-        <!-- end of row -->
     </div>
-    <!-- end of container-fluid -->
 </section>
