--- a/dbtest2/Views/Login/Register.cshtml
+++ b/dbtest2/Views/Login/Register.cshtml
@@ -26,26 +26,26 @@
                             </div>
                             <div class="form-group form-primary">
                                 <label class="float-label">Username</label>
-                                <input type="text" name="user_name" class="form-control" placeholder="Choose Username">
+                                <input type="text" name="user_name" class="form-control" placeholder="Choose Username" required="required">
                                 <span class="form-bar"></span>
                             </div>
                             <div class="form-group form-primary">
                                 <label class="float-label">Email Address</label>
-                                <input type="text" name="email" class="form-control" placeholder="Your Email Address">
+                                <input type="text" name="email" class="form-control" placeholder="Your Email Address" required="required">
                                 <span class="form-bar"></span>
                             </div>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group form-primary">
                                         <label class="float-label">Password</label>
-                                        <input type="password" name="password" class="form-control" placeholder="Password">
+                                        <input type="password" name="password" class="form-control" placeholder="Password" required="required">
                                         <span class="form-bar"></span>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group form-primary">
                                         <label class="float-label">Confirm Password</label>
-                                        <input type="password" name="password2" class="form-control" placeholder="Confirm Password">
+                                        <input type="password" name="password2" class="form-control" placeholder="Confirm Password" required="required">
                                         <span class="form-bar"></span>
                                     </div>
                                 </div>
